#
#  Rem:  This files describes release notes for 
#        the FastFeedback IOC Application.        
#
#  Auth: 19-May-2015, L. Piccoli         (lpiccoli)
#        18-Nov-2015, A. Babbitt         (ababbitt)
#               2017, J. Mock            (jmock)
#               2018, W. Williams        (ernesto)
#      
#==============================================================
R3.2.0:   25-August-2020 R.Reno (rreno)
    * Add ability to select BY1 energy source at IOC startup
    * Fixed bug where error handling code for an FCOM channel creation failure would never run
    * Target linuxRT platform on watchdog IOC (sioc-sys0-fb01)
    * Rewrote README in Markdown
    * Added UNDS BLD IOC (sioc-unds-tr02) 

R3.1.0:   05-August-2020 R.Reno (rreno)
    * Add 2 new transverse feedbacks for SXR (sioc-ltus-tr01 sioc-unds-tr01)
    * Codebase changes:
        - Build targets only linuxRT buildroot2019 (C++14 by default)
        - Got old unit tests up and running
        - Remove dynamic exception specifications. 
            Removed all instances of `throw(Exception)` and replaced `throw()` with `noexcept`

R3.0.3:   29-July-2020 R.Reno (rreno)
    * Add ability to snap state setpoints to average of last 10 calculated states for P1.

R3.0.2:   2-July-2020 J. Mock (jmock)
    * Fix LTU0 hard coded PV inputs to LTUH

R3.0.1:   28-April-2020 J. Mock (jmock)
    * Change create_triggered_set to create_monitored_set for autosave of loop config
    * Change LEM PV from DMP1 to DMPH for long feedback

R3.0.0:   28-April-2020 J. Mock (jmock)
    * upgrade to EPICS R7.0.3 and buildroot-2019.08 (and to c++11)
    * Change the way singleton classes are handled to be compatible with c++11
    * Upgrade evrClient, fcom fcomUtil, udpComm, bsaCore, timingApi to be compatible with
      CLTS EVG timing changes
    * Remove st-on.cmd and st-off.cmd from all iocBoot directories.  These are depricated scripts.
          

R2.0.0:   18-April-2019 Ernest Williams (ernesto) 