@@ -11,6 +11,11 @@
 #               2018, W. Williams        (ernesto)
 #      
 #==============================================================
+R3.2.1:   25-August-2020 J. Mock (jmock)
+    * Remove calls to zeroOffset() in Longitudinal.cc to stop SXR loop from snapping
+        to HXR value when the beam trips off
+    * Also comment out _referenceOffset = 0 in ActuatorDevice.cc::clear() for same reason
+
 R3.2.0:   25-August-2020 R.Reno (rreno)
     * Add ability to select BY1 energy source at IOC startup
     * Fixed bug where error handling code for an FCOM channel creation failure would never run
